--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: node_js
-node_js:node_js:
-	-"stable"
+node_js:
+  - "6"
+before_script:
+  - npm install
+script:
+  - node app.js &
+  - npm test
