--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "acit2910",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "mocha",
     "start": "node server.js"
