--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "jquery": "^3.2.1",
     "pg": "^6.1.5",
     "socket.io": "^1.7.4",
+    "webpac": "^1.0.1",
     "webpack": "^2.5.1"
   },
-  "description": "",
+  "description": "**DISCLAIMER**: This website is for a BCIT ACIT-2910 Summer 2017 project course. \r A food ordering web application for the Star Wars Rebel base, on Planet Hoth.",
   "devDependencies": {
     "jshint": "^2.9.4",
     "mocha": "^3.3.0"
+  },
+  "directories": {
+    "test": "test"
   }
 }
