--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: node_js
 node_js:
   - 0.12
-  addons:
-  apt:
-    packages:
-      - oracle-java8-set-default
+before_install: 
+  - sudo apt-get install oracle-java8-set-default
