--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: node_js
 node_js:
-  - "4"
-  - "5"
-  - "6"
   - "7"
 
 sudo: required
@@ -20,4 +17,4 @@ before_install:
  - jdk_switcher use oraclejdk8
  
 script:
- - node server.js
+ - node server.js&
